Tue Aug  2 07:33:29 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* test/net/http/test_http.rb (TestNetHTTP_version_1_1_methods#test_timeout_during_HTTP_session):
	  If you connect to localhost, you should listen localhost.

	* test/net/http/test_https.rb (TestNetHTTPS#test_timeout_during_SSL_handshake):
	  ditto.

Tue Aug  2 06:18:15 2011  Luis Lavena  <luislavena@gmail.com>

	* lib/rubygems/installer.rb (class Gem): Correct path check on Windows
	  Possible fix for [Ruby 1.9 - Bug #5111]
	* test/rubygems/test_gem_installer.rb (load Gem): ditto

Mon Aug  1 20:12:03 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_process.rb (TestProcess#windows?): new method.

	* test/ruby/test_process.rb (TestProcess#*): use above method.

	* test/ruby/test_process.rb (TestProcess#test_execopts_redirect):
	  windows doesn't support FD_CLOEXEC.

Mon Aug 01 15:45:23 2011  Eric Hodel  <drbrain@segment7.net>

	* test/rake/test_rake_functional.rb:  Don't assume the binary name of
	  ruby is "ruby".  [Ruby 1.9 - Bug #5114]
	* test/rake/helper.rb:  ditto

Mon Aug  1 15:31:14 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* test/io/console/test_io_console.rb (TestIO_Console#test_sync):
	  Skip when PTY allocation failed (that's not our fault).

Mon Aug  1 15:04:12 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* test/xmlrpc/test_webrick_server.rb (Test_Webrick#setup_http_server):
	  XMLRPC::Client.new3(), when called without host: argument, tries
	  to  connect to  a host  where "localhost"  resolves to.   On the
	  other  hand  a  WEBrick::HTTPServer.new(), when  called  without
	  BindAddress:  argument, tries  to listen  all the  address where
	  getaddrinfo(AF_UNSPEC) resolves to.   This is a mismatch because
	  "localhost" might not resolve to one of those listening sockets.
	  We  would  better explicitly  specify  "localhost"  here and  if
	  failed, just skip the whole test.

Mon Aug 01 14:24:56 2011  Eric Hodel  <drbrain@segment7.net>
